// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match snapshot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot when opened 1`] = `
<scale-modal opened="">
  <mock:shadow-root>
    <style>
      .modal-0-0-82 {}
.modal__content-0-0-83 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  opacity: 0;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  pointer-events: none;
  justify-content: space-between;
}
.modal__backdrop-0-0-84 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  opacity: 0;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
  pointer-events: none;
}
.modal__header-0-0-85 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-85 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-86 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-87 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-87:hover {
  opacity: 1;
}
.modal__actions-0-0-88 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-88 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-89 {}
.modal--opened-0-0-89 .modal__backdrop-0-0-84, .modal--opened-0-0-89 .modal__content-0-0-83 {
  opacity: 1;
  pointer-events: all;
}
.modal--opened-0-0-89 .modal__content-0-0-83 {
  top: 15vh;
}
.modal--hidden-0-0-90 {
  display: none;
}
    </style>
    <animatable-component>
      <div class="modal--hidden-0-0-90 modal--opened-0-0-89 modal-0-0-82">
        <div class="modal__backdrop-0-0-84"></div>
        <div class="modal__content-0-0-83">
          <div class="modal__body-0-0-86">
            <slot></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot with actions slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="modal-actions">
    Action buttons
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with close slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="close">
    Close
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with header slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header content
  </span>
  A title
</scale-modal>
`;
